--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y ninja-build clang cmake \
-            libvulkan-dev vulkan-validationlayers-dev \
+            libvulkan-dev vulkan-utility-libraries-dev \
             libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev \
             libwayland-dev libxkbcommon-dev
 
@@ -39,7 +39,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
+    - name: Install Vulkan SDK
+      uses: humbletim/install-vulkan-sdk@v1.2
+      with:
+       version: 1.4.309.0
+       cache: true
     - name: Configure with CMake (Windows)
       run: |
         cmake -S . -B out -G "Visual Studio 17 2022" -A x64 -T ClangCL -DCMAKE_BUILD_TYPE=Release
