--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y ninja-build clang cmake \
-            libvulkan-dev vulkan-utility-libraries-dev spirv-tools glslang-tools \
+            vulkan-sdk libvulkan-dev vulkan-utility-libraries-dev spirv-tools glslang-tools \
             libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev \
             libwayland-dev libxkbcommon-dev
 
